# RTv1

./: .gitmodules  CMakeLists.txt  Makefile  README.md  author
cmake/: FindSDL2.cmake
includes/: rtv1.h  vector_math.h
src/: camera.c  main.c  material_scatters.c  math_constructors.c  math_mat4_operators.c  math_vec3_opeartors.c  math_vec4_opeartors.c  primitives.c  ray.c  vec_tools.c
src/math/: math_constructors.c  math_mat4_operators.c  math_transformations.c  math_utils.c  math_vec3_opeartors.c  math_vec4_opeartors.c  ray.c
src/outdated_things/: math_mat4_operators.c  math_transformations.c  math_vec4_opeartors.c
src/render_objects/: cube.c  sphere.c
src/to_libft/: ft_lstadd_end.c
